Transmit first 3d object from server to client